# otus_homework_02

./: .travis.yml  CMakeLists.txt  ip_filter.cpp  ip_filter.hpp  main.cpp
lib/: CMakeLists.txt  ip_filter.hpp
pkg/: CMakeLists.txt
src/: CMakeLists.txt
tst/: CMakeLists.txt  trivial.cpp
